--- a/exercise/physics/Quantum Mechanics/HW5/QM HW5.tex
+++ b/exercise/physics/Quantum Mechanics/HW5/QM HW5.tex
@@ -149,6 +149,9 @@ Since $A_{ij}$ is a number, $[A_{ij},N]=0$, thus
     \begin{equation}
         \boxed{ \frac{\dd}{\dd{t}}\bra{\alpha}\mathbf{x}\cdot\mathbf{p}\ket{\alpha}=\expval{\frac{p^2}{m}}-\expval{\mathrm{x}\cdot\nabla V}.}
     \end{equation}
+    
+    When $\ket{\alpha}$ is a stationary state, left hand side vanishes.
+    \newline
     (2) Since $H$ is Hermitian and $E$ is real, we have 
     \begin{equation}
       (H-E)  \ket{n,\lambda}=0,\ \bra{n,\lambda}(H-E)=0.
